main/default/objects/Session_Role__c/Session_Role__c.object-meta.xml
<CustomObject>
    <description>01080 - Custom object for Session Role</description>
    <label>Session Role</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Session Role Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>