main/default/objects/Session_Role__c/fields/Number_of_Role__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Role__c</fullName>
    <description>Number of Roles in a Session</description>
    <label>Number of Role</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>