main/default/objects/Session_Role__c/fields/Role_Description__c.field-meta.xml
<CustomField>
    <fullName>Role_Description__c</fullName>
    <description>Description of Role</description>
    <label>Role Description</label>
    <type>TextArea</type>
</CustomField>