main/default/objects/Session_Role__c/fields/Role_Title__c.field-meta.xml
<CustomField>
    <fullName>Role_Title__c</fullName>
    <description>Title of the Role</description>
    <label>Role Title</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>