main/default/objects/Session_Role__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Session</description>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Session Roles</relationshipLabel>
    <relationshipName>Session_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>